Fix crash when killing a process

BUG:269094
BUG:261251